--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxt-alt/proxy": "^2.3.2",
-    "bootstrap": "^5.3.1"
+    "bootstrap": "^5.3.1",
+    "crypto-js": "^4.1.1"
   }
 }
