--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.1"
+    "nuxt": "^3.7.1",
+    "nuxt-icon": "^0.5.0"
   },
   "dependencies": {
     "@nuxt-alt/proxy": "^2.3.2",
